<resources>
    <string name="app_name">WayFindr</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="google_map_api_key" translatable="false">AIzaSyCp7NoV0_lRIbv8J_pjz1NzsvJbwGnR1V0</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="category_array">
        <item>Müze</item>
        <item>Kafe</item>
        <item>Restoran</item>
        <item>Eğlence</item>
        <item>Tarihi</item>
        <item>Dini</item>
        <item>Doğa</item>
        <item>Workshop</item>
        <item>Sembol</item>
        <item>Avm</item>
        <item>Sahiller</item>
    </string-array>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_maps_nav">MapsNav</string>
    <string name="title_activity_memories_detail">Memories Detail</string>
    <string name="activity_admin_name">Name</string>
    <string name="activity_admin_username">User name</string>
    <string name="activity_admin_email">E-mail</string>
    <string name="activity_admin_password">Password</string>
    <string name="activity_admin_button">UPDATE</string>
    <string name="activity_memories_tittle">MEMORIES</string>
    <string name="activity_memories_userComment">User Comment</string>
    <string name="activity_memories_comment">Comments</string>
    <string name="activity_memories_photoLocation">Photo Location</string>
    <string name="activity_navigation_tittle">Navigation Page</string>
    <string name="activity_register_tittle">Register Page</string>
    <string name="activity_register_name_surname">Name-Surname</string>
    <string name="activity_register_email">E-mail</string>
    <string name="activity_register_userName">User Name</string>
    <string name="activity_register_password">Password</string>
    <string name="activity_register_passwordAgain">Password Again</string>
    <string name="activity_register_contract1">I have read and understood the information text regarding the processing of my personal data.</string>
    <string name="activity_register_contract2">I accept the terms of use.</string>
    <string name="activity_register_button1">Register</string>
    <string name="activity_register_button2">Without Registration</string>
    <string name="activity_register_text">Already have an account?</string>
    <string name="activity_register_login">Login</string>
    <string name="activity_setting_tittle">SETTİNGS</string>
    <string name="activity_setting_languages">Languages</string>
    <string name="activity_setting_contract">Contracts</string>
    <string name="activity_setting_abouts">Abouts</string>
    <string name="activity_setting_logout">Log out</string>
    <string name="activity_setting_deleteAccount">Delete account</string>
    <string name="add_places_fragment_tittle">Add Places</string>
    <string name="add_places_fragment_selectPhoto">Select Venue Photo</string>
    <string name="add_places_fragment_placeNameHint">Place Name...</string>
    <string name="add_places_fragment_placeNam">Place Name</string>
    <string name="add_places_fragment_placeCategoriesHint">Place Category...</string>
    <string name="add_places_fragment_placeCategories">Place Category</string>
    <string name="add_places_fragment_placeLocationHint">Location...</string>
    <string name="add_places_fragment_placeLocation">Location</string>
    <string name="add_places_fragment_placeAddButton">Add a Place</string>
    <string name="comment_item">Comment</string>
    <string name="dialog_aboutUs_tittle">About Us</string>
    <string name="dialog_aboutUs_txt1">Wayfindr is a mobile museum guide app designed to facilitate your cultural exploration. Our goal is to provide visitors with richer, educational and enjoyable experiences when exploring museums and art galleries.</string>
    <string name="dialog_aboutUs_txt2">Easy to Use: Wayfindr is designed with a user-friendly interface, so it allows you to navigate easily while browsing museums.Personalized Guidance: The application provides guidance specific to the museum you are visiting. Learn about the exhibitions, be directed to important works and save your favorite works. Art Education: Wayfindr offers educational content developed in accordance with the needs of all types of visitors. Learn the histories of the works of art, their artists and important details.
  Interactive Experience: The application offers interactive features for visitors to learn more about the works and customize their own artistic journey."</string>
    <string name="dialog_aboutUs_txt3">Our Mission: Facilitating Culture Our goal at Wayfindr is to make culture more accessible and help people get in closer contact with art and history. We are proud to accompany you as you explore the fascinating world of museums and art galleries.Choose Wayfindr to explore museums better and have cultural experiences. We are here to accompany you on this exciting journey full of art and history</string>
    <string name="dialog_forget_tittle">Forget Password</string>
    <string name="dialog_forget_txt">Enter your email address</string>
    <string name="dialog_forget_button1">Cancel</string>
    <string name="dialog_forget_button2">Reset</string>
    <string name="fragment_category_detail_tittle">Category Name</string>
    <string name="fragment_contracts_tittle">Contracts</string>
    <string name="filter_fragment_tittle">Filtering Options</string>
    <string name="filter_fragment_pricing">Pricing</string>
    <string name="filter_fragment_paid">Paid</string>
    <string name="filter_fragment_free">Free</string>
    <string name="filter_fragment_distance">Distance</string>
    <string name="filter_fragment_district">Districts</string>
    <string name="filter_fragment_categories">Categories</string>
    <string name="filter_fragment_categories1">Historical Museums</string>
    <string name="filter_fragment_categories2">Museums of Science and Industry</string>
    <string name="filter_fragment_categories3">Anthropology Museums</string>
    <string name="filter_fragment_categories4">Art Museums</string>
    <string name="filter_fragment_categories5">Private Museums</string>
    <string name="filter_fragment_button1">Clear</string>
    <string name="filter_fragment_button2">Filter</string>
    <string name="fragment_home_city">Istanbul</string>
    <string name="fragment_home_popular">Popular</string>
    <string name="fragment_home_categories">Categories</string>
    <string name="fragment_home_categories1">Anthropology</string>
    <string name="fragment_home_categories2">Science and Industry</string>
    <string name="fragment_home_categories3">Private</string>
    <string name="fragment_home_categories4">Art</string>
    <string name="fragment_home_categories5">History</string>
    <string name="fragment_home_hi">Hi</string>
    <string name="fragment_home_letsexplore">Let\'s explore the places around.</string>
    <string name="fragment_categories_avm">Shopping Mall</string>
    <string name="fragment_categories_religious">Religious</string>
    <string name="fragment_categories_nature">Nature</string>
    <string name="fragment_categories_entertaiment">Entertaiment</string>
    <string name="fragment_categories_cafe">Cafe</string>
    <string name="fragment_categories_museum">Museum</string>
    <string name="fragment_categories_restaurant">Restaurant</string>
    <string name="fragment_categories_hotel">Hotel</string>
    <string name="fragment_categories_library">Library</string>
    <string name="fragment_home_events_title">Events</string>
    <string name="fragment_image_selection_tittle">Select Image</string>
    <string name="fragment_image_selection_comment">Comment</string>
    <string name="fragment_image_selection_load">Load</string>
    <string name="fragment_image_selection_Location">Location</string>
    <string name="fragment_language_tittle">Language Options</string>
    <string name="fragment_language_button">Button</string>
    <string name="fragment_login_tittle">Login Screen</string>
    <string name="fragment_login_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_forgetPassword">Forget Password</string>
    <string name="fragment_login_button1">Login</string>
    <string name="fragment_profile_edit_name">Name</string>
    <string name="fragment_profile_edit_name2">Name</string>
    <string name="fragment_profile_edit_username">User Name</string>
    <string name="fragment_profile_edit_username2">User Name</string>
    <string name="fragment_profile_edit_email">Email</string>
    <string name="fragment_profile_edit_email2">Email</string>
    <string name="fragment_profile_edit_password">Password</string>
    <string name="fragment_profile_edit_password2">Password</string>
    <string name="fragment_profile_edit_button">UPDATE</string>
</resources>