<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".ProfileEdit">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/closeBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back_arrow_navigation_svgrepo_com"
                android:background="@drawable/blurbackground"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/profilephotoicon"
                app:civ_border_color="#FF000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profile_edit_name"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/editName"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/fragment_profile_edit_name2"
                android:textSize="10sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profile_edit_username"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/editUserName"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/fragment_profile_edit_username2"
                android:textSize="10sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profile_edit_email"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/editEmail"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/fragment_profile_edit_email2"
                android:textSize="10sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profile_edit_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/editPassword"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/fragment_profile_edit_password2"
                android:textSize="10sp"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/fragment_profile_edit_button"
                android:id="@+id/editButton"
                android:textSize="10sp"
                android:textColor="@color/vintage"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                app:cornerRadius = "20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>