<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageSelectionFragment"
    android:background="@color/grey">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/fragment_image_selection_tittle"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_add_photo_alternate_24"
            app:layout_constraintBottom_toTopOf="@+id/user_comment_edittxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/user_comment_edittxt"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/fragment_image_selection_comment"
            android:gravity="center"
            android:background="@drawable/border"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/upload_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_image_selection_load"
            app:layout_constraintEnd_toEndOf="@+id/photo_location_text"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/photo_location_text"
            app:layout_constraintTop_toBottomOf="@+id/photo_location_text" />

        <EditText
            android:id="@+id/photo_location_text"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/fragment_image_selection_Location"
            android:gravity="center"
            android:background="@drawable/border"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/user_comment_edittxt"
            app:layout_constraintStart_toStartOf="@+id/user_comment_edittxt"
            app:layout_constraintTop_toBottomOf="@+id/user_comment_edittxt" />

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/icons_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>